responsive fixes on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,10 @@ body {
 
 #container {
     background-color: #ECF0F1;
-    width: 25%;
+    /* width: 25%; */
     height: 40%;
     margin: 2% auto;
+    min-width: 15%;
     /* border: 1px solid #000; */
 }
 
